# swarmcore

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: research_team.py  tiered_context.py  tiered_context_simple.py
src/swarmcore/: __init__.py  agent.py  agents.py  console.py  context.py  context_tools.py  exceptions.py  flow.py  hooks.py  logging.py  models.py  otel.py  swarm.py  tools.py
tests/: conftest.py  test_agent.py  test_agents.py  test_console.py  test_context.py  test_context_tools.py  test_flow.py  test_flow_parser.py  test_hooks.py  test_logging_handler.py  test_parse_structured_output.py  test_retries.py  test_retry.py  test_summary.py  test_swarm.py  test_tools.py  test_typed_events.py
