[project]
name = "swarmcore"
version = "0.1.0"
description = "Coordinate AI agents in a workflow"
readme = "README.md"
authors = [
    { name = "Henry Zhang", email = "zeri@umich.edu" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
