[project]
name = "swarmcore"
version = "0.2.0"
description = "Coordinate AI agents in a workflow"
readme = "README.md"
authors = [
    { name = "Henry Zhang", email = "zeri@umich.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "litellm>=1.0",
    "pydantic>=2.0",
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
