[project]
name = "swarmcore"
version = "0.3.0"
description = "Coordinate AI agents in a workflow"
readme = "README.md"
authors = [
    { name = "Henry Zhang", email = "zeri@umich.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "litellm>=1.0",
    "pydantic>=2.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
]
tools = [
    "duckduckgo-search>=6.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
